get submit list
