# service/submit.go
@@ -1,0 +1,54 @@
+package service
+
+import (
+	"gin-gorm-oj/define"
+	"gin-gorm-oj/models"
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+	"strconv"
+)
+
+// GetSubmitList
+// @Tags 公共方法
+// @Summary 提交列表
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Param problem_identity query string false "problem_identity"
+// @Param user_identity query string false "user_identity"
+// @Param status query int false "status"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /submit/list [get]
+func GetSubmitList(c *gin.Context) {
+	size, _ := strconv.Atoi(c.DefaultQuery("page", define.DefaultSize))
+	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	if err != nil {
+		log.Println("get problem basci list error")
+		return
+	}
+	page = (page - 1) * size
+	var count int64
+	list := make([]models.SubmitBasic, 0)
+
+	problemIdentity := c.Query("problem_identity")
+	userIdentity := c.Query("user_identity")
+	status, _ := strconv.Atoi(c.DefaultQuery("status", "0"))
+	tx := models.GetSubmitList(problemIdentity, userIdentity, status)
+	err = tx.Count(&count).Offset(page).Limit(size).Find(&list).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "get submit list failed, error:" + err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
+		},
+		"count": count,
+	})
+}
